--- a/estilo.css
+++ b/estilo.css
@@ -27,6 +27,7 @@ h1 {
     font-family: 'pincel';
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 40px;
 }
 h2 {
     font-family: 'pincel';
