--- a/estilo.css
+++ b/estilo.css
@@ -6,11 +6,14 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 main{
     position:relative;
     width: 100vw;
     height: 100vh;
     
+    
+    background-color: #F4E7EE;
 
 }
     
