--- a/menu.css
+++ b/menu.css
@@ -7,7 +7,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    height: 100vh;
+    height: 100%;
     background-color: #F4E7EE;
     
 }
@@ -28,6 +28,8 @@ header {
  
     
 }
+
+
 header h1 {
     
     font-size: 26px;
@@ -55,10 +57,10 @@ h2{ padding: 30px;
     
     align-items: center;
     margin-top: 5px;
-    padding: 15px;
+    padding: 15px ;
     font-size: 14px;
     border-bottom: 1px solid #757575 ;
-    
+    margin: 10px 15px 0px 15px ;
     cursor: pointer;
    
     
@@ -87,11 +89,12 @@ footer{
     height: 51px;
     
     align-items: center;
-    position: sticky;
+    
     bottom: 0%;
-    top: 0%;
+    width: 100%;
     box-shadow: -1px -5px 8px #00000086;
     justify-content: space-around;
+    position: sticky;
     
     
 }
