--- a/agendamento.css
+++ b/agendamento.css
@@ -10,10 +10,11 @@
 body{
     font-size: 14px;
     background-color: #F4E7EE;  
+    
 }
 header {
-    background-color: black;
-    color: rgb(218, 165, 32);
+    background-color: #676F88;
+    color: white;
     display: flex;
     height: 51px;
     width: 100%;
@@ -101,6 +102,8 @@ div img {
     .tudo{
         padding-bottom: 70px;
     padding-top: 50px;
+    background-color: #F4E7EE;  
+    
 }
 
     
@@ -141,10 +144,7 @@ footer div {
     padding: 8px;
 }
 
-.n1 a {
-    
-justify-content: left;
-}
+
 #caixa {
     padding-bottom: 50px;
     padding-top: 50px;
